2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* threads.lisp (THREAD-KILL): remove

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* threads.lisp (THREAD-KILL): add :OVERRIDE keyword argument. Allows
	killing a thread even interrupts are deferred in it

2009-06-25  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: allow THREAD-INTERRUPT to ignore WITH-DEFERRED-INTERRUPTS
	* zthread.d (THREAD-INTERRUPT): accept :FUNCTION, :OVERRIDE and
	:ARGUMENTS keyword arguments
	(push_interrupt_arguments): helper function to push on foreign thread
	stack required data for THREAD-INTERRUPT implementation
	(THREAD-KILL): remove
	* subr.d, subrkw.d: add :FUNCTION, :OVERRIDE and :ARGUMENTS to
	THREAD-INTERRUPT arguments
	(THREAD-KILL): remove
	* constsym.d: add :OVERRIDE and :FUNCTION symbols
	(THREAD-KILL): remove
	* spvw.d (handle_pending_interrupts): ignore WITH-DEFERRED-INTERRUPTS
	if asked to do so
	(signal_handler_thread): on SIGINT and fatal signals - force interrupt
	* threads.lisp (THREAD-KILL): implement via THREAD-INTERRUPT

2009-06-24  Sam Steingold  <sds@gnu.org>

	* makemake.in (GLLIB_O): when REPLACE_GETPAGESIZE is 1, add
	gllib/getpagesize${TOBJ} (just like with gettimeofday)
	Reported by Yaroslav Kavenchuk <kavenchuk@jenty.by>

2009-06-23  Sam Steingold  <sds@gnu.org>

	* .gdbinit [MULTITHREAD]: suggest "handle SIGUSR1 noprint nostop"

2009-06-23  Sam Steingold  <sds@gnu.org>

	* spvw_mmap.d (mprotect) [HAVE_WIN32_VM]: guard the definition
	with #ifdef HAVE_MPROTECT because mingw may already have it in
	/lib/gcc/i686-pc-mingw32/3.4.4/libgcc.a(_trampoline.o):(.text+0x10)

2009-06-22  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2807311 ]: (expt 10 10000000) segfaults
	 (cf. 2008-07-10, bug #[ 2015118 ])
	* intmal.d (I_square_I): tighten the erglen check (use 16-bit intW
	instead of 32-bit intWC) so that the arithmetic-error
	"overflow during multiplication of large numbers"
	is signaled instead of a SP overflow (segfault) which results from